--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/litehtml"]
-	path = libs/litehtml
-	url = git@github.com:tordex/litehtml.git
+[submodule "litehtml"]
+	path = litehtml
+	url = https://github.com/litehtml/litehtml
