fix scroll problem

--- a/src/litebrowser.vcxproj
+++ b/src/litebrowser.vcxproj
@@ -273,7 +273,7 @@
     <ResourceCompile Include="litebrowser.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\libs\litehtml\include\master.css" />
+    <None Include="..\litehtml\include\master.css" />
     <None Include="html\toolbar.html" />
   </ItemGroup>
   <ItemGroup>
