--- a/src/litebrowser.vcxproj
+++ b/src/litebrowser.vcxproj
@@ -215,11 +215,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BrowserWnd.h" />
+    <ClInclude Include="dib.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="HtmlViewWnd.h" />
     <ClInclude Include="litebrowser.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="tordexhttp.h" />
     <ClInclude Include="web_history.h" />
     <ClInclude Include="web_page.h" />
