--- a/src/litebrowser.vcxproj.filters
+++ b/src/litebrowser.vcxproj.filters
@@ -1,76 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="container">
+      <UniqueIdentifier>{46aae4d7-77c9-48d4-ba61-3f1ae1aae277}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BrowserWnd.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="HtmlViewWnd.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="litebrowser.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="tordexhttp.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="web_history.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="web_page.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="BrowserWnd.cpp" />
+    <ClCompile Include="dib.cpp" />
+    <ClCompile Include="HtmlViewWnd.cpp" />
+    <ClCompile Include="litebrowser.cpp" />
+    <ClCompile Include="tordexhttp.cpp" />
+    <ClCompile Include="web_history.cpp" />
+    <ClCompile Include="web_page.cpp" />
+    <ClCompile Include="..\litehtml\containers\gdiplus\gdiplus_container.cpp">
+      <Filter>container</Filter>
     </ClCompile>
     <ClCompile Include="..\litehtml\containers\win32\win32_container.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\litehtml\containers\gdiplus\gdiplus_container.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="dib.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>container</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BrowserWnd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="globals.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="HtmlViewWnd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="litebrowser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="tordexhttp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="web_history.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="web_page.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="BrowserWnd.h" />
+    <ClInclude Include="globals.h" />
+    <ClInclude Include="HtmlViewWnd.h" />
+    <ClInclude Include="litebrowser.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="tordexhttp.h" />
+    <ClInclude Include="web_history.h" />
+    <ClInclude Include="web_page.h" />
+    <ClInclude Include="dib.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="litebrowser.ico">
