--- a/src/litebrowser.vcxproj
+++ b/src/litebrowser.vcxproj
@@ -232,7 +232,7 @@
     <ResourceCompile Include="litebrowser.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="litehtml-VS2022.vcxproj">
+    <ProjectReference Include="..\litehtml-VS2022-project\litehtml-VS2022.vcxproj">
       <Project>{9db04678-5d10-4a2e-820a-3761e2869854}</Project>
     </ProjectReference>
   </ItemGroup>
