--- a/litehtml-VS2022-project/litehtml-VS2022.vcxproj.filters
+++ b/litehtml-VS2022-project/litehtml-VS2022.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="litehtml.cpp">
       <Filter>-----------EVERYTHING------------</Filter>
     </ClCompile>
+    <ClCompile Include="gumbo.c">
+      <Filter>gumbo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="gumbo">
